fixed z-index and positioning of stream filter spinners

--- a/app/sass/_widget_dropdown.sass
+++ b/app/sass/_widget_dropdown.sass
@@ -118,6 +118,10 @@
 #users-filter-wrap, #entry-filter-wrap
   margin: 4px 0 1px
 
+// this makes the menus show up over top of the spinners
+#entry-filter-menu, #users-filter-menu
+  z-index: 2 !important
+
 // STREAM FILTERS - widget
 #streamContextPanel select, #entry-filter-button, #entry-filter-menu, #users-filter-button, #users-filter-menu
   +pointer
